--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,6 +4,11 @@ templateClass: tmpl-post
 ---
 <h1>{{ title }}</h1>
 
+
+<h2>{{duckData.message}}<h2>
+<img src={{duckData.url}} alt="Duck Image">
+
+
 <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time>
 {%- for tag in tags | filterTagList -%}
 {%- set tagUrl %}/tags/{{ tag | slug }}/{% endset -%}
