add board and play function to script

--- a/_includes/layouts/kids.njk
+++ b/_includes/layouts/kids.njk
@@ -7,8 +7,23 @@ templateClass: tmpl-kids
 
 <script>
 
+const board = const board = {
+  one: null,
+  two: null,
+  three: null,
+  four: null,
+  five: null,
+  six: null,
+  seven: null,
+  eight: null,
+  nine: null,
+}
 
-    
+function play() {
+  // play Tic Tac Toe
+
+}
+
 </script>
 
 </div>
