--- a/_includes/layouts/our-mission.njk
+++ b/_includes/layouts/our-mission.njk
@@ -3,4 +3,14 @@ layout: layouts/base.njk
 templateClass: tmpl-our-mission
 ---
 
-<h2>no content in this file; put in draft/content-file.doc</h2>
+Dont put content in the template, unless there is a special reason for it. Put the content in `our-mission/index.md`
+
+We want authoring to be a pleasant experience. If we can write more in markdown, less in html/other stuff, that will help us focus on the content and the experience of writing.
+
+What you are seeing displayed. The content below this line has been injected into the template, and uses `our-mission/index.md`
+
+There is a safe filter applied to the template's injected content. That makes sure dangerous content isn't injected.
+
+<hr />
+
+{{ content | safe }}
