--- a/css/index.css
+++ b/css/index.css
@@ -230,7 +230,8 @@ a[href].direct-link:focus:visited,
 
 .cell {
   background-color: blue;
-  font-size: 50%;
+  font-size: 50px;
+  color: cyan;
 }
 
 .row {
