--- a/_includes/layouts/kids.njk
+++ b/_includes/layouts/kids.njk
@@ -73,7 +73,7 @@ templateClass: tmpl-kids
                 if (board.charAt(cellId) === '-' && gameState.playerTurn === 'O') {
                     // update board data and visuals
                     cell.innerText = 'O'
-                    board.replaceAt(cellId,'0')
+                    move(board, 'O', cellId)
                     console.info("update player turn", board)
                     console.info("gamestate", gameState)
                     setPlayerTurn('X')
@@ -91,17 +91,7 @@ templateClass: tmpl-kids
             board = newBoard
         }
         const clearCells = () => {
-            const cellIds = [
-                '0',
-                '1',
-                '2',
-                '3',
-                '4',
-                '5',
-                '6',
-                '7',
-                '8'
-            ]
+            const cellIds = ['0', '1', '2','3','4','5','6','7','8']
             cellIds.forEach(cellId => {
                 const cell = document.getElementById(cellId)
                 cell.innerText = ''
