a-duck-has-migrated

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -3,3 +3,9 @@ layout: layouts/base.njk
 templateClass: tmpl-home
 ---
 {{ content | safe }}
+
+
+<h1>A Duck Has Migrated</h1>
+
+<h2>{{duckData.message}}<h2>
+<img src={{duckData.url}} alt="Duck Image">
