--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -5,8 +5,7 @@ templateClass: tmpl-post
 <h1>{{ title }}</h1>
 
 
-<h2>A Burning Wind Howls, and a hurricane stirs the silence.<h2>
+{{ content | safe }}
 
 
 
-{%- endif %}
