more-fun-with-templates

--- a/_includes/layouts/experiment-graphing.njk
+++ b/_includes/layouts/experiment-graphing.njk
@@ -11,7 +11,7 @@ const clearAnalyteTable = () => {
 
   console.log("clearAnalyteTable()")
 
-  const tableDiv = document.getElementById('nalyte-search-output')
+  const tableDiv = document.getElementById('analyte-search-output')
   if (tableDiv) {
      tableDiv.innerHTML = ""
      searchedName = null 
