--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -9,3 +9,12 @@ templateClass: tmpl-home
 
 <h2>{{duckData.message}}<h2>
 <img src={{duckData.url}} alt="Duck Image">
+
+<h2>The Combatants have entered the ring.</h2>
+
+<span id="battle-ring">
+  <h3>Mongoose</h3>
+  <img src="/img/mongoose.jpeg" alt="Mongoose Image">
+  <h3>Snake</h3>
+  <img src="/img/snake.jpeg" alt="Snake Image">
+</span>
