--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -14,7 +14,7 @@ templateClass: tmpl-home
 
 <span id="battle-ring">
   <h3>Mongoose</h3>
-  <img src="/img/mongoose.jpeg" alt="Mongoose Image">
+  {% image "./img/mongoose.jpeg", "an evil mongoose", "100vw" %}
   <h3>Snake</h3>
-  <img src="/img/snake.jpeg" alt="Snake Image">
+   {% image "./img/snake.jpeg", "a suspicious snake", "100vw" %}
 </span>
